--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "@tsconfig/svelte": "^3.0.0",
-    "prettier": "2.7.1",
+    "autoprefixer": "^10.4.8",
+    "postcss-load-config": "^4.0.1 ",
+    "postcss": "^8.4.16",
     "prettier-plugin-svelte": "2.7.0",
+    "prettier": "2.7.1",
     "svelte-check": "^2.8.0",
     "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.8",
     "tslib": "^2.4.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.0"
+    "typescript": "~4.7.4",
+    "vite": "^3.0.4"
   }
 }
