--- a/fly.toml
+++ b/fly.toml
@@ -1,37 +1,35 @@
 app = "classes-wtf"
-
+primary_region = "ewr"
 kill_signal = "SIGINT"
 kill_timeout = 5
-processes = []
 
 [experimental]
-  allowed_public_ports = []
   auto_rollback = true
 
 [env]
   SWAP = "1"
 
 [[services]]
+  protocol = "tcp"
   internal_port = 7500
   processes = ["app"]
-  protocol = "tcp"
 
   [services.concurrency]
+    type = "connections"
     hard_limit = 65536
     soft_limit = 1024
-    type = "connections"
 
   [[services.ports]]
-    handlers = ["http"]
     port = 80
+    handlers = ["http"]
     force_https = true
 
   [[services.ports]]
-    handlers = ["tls", "http"]
     port = 443
+    handlers = ["tls", "http"]
 
   [[services.tcp_checks]]
-    grace_period = "1s"
     interval = "15s"
-    restart_limit = 0
     timeout = "2s"
+    grace_period = "1s"
+    restart_limit = 0
