--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
       - run: npm ci
 
-      - run: npx prettier --check .
+      - run: npm run format:check
 
       - run: npm run check
 
