--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,12 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   go:
@@ -12,7 +18,7 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: "1.19"
+          go-version: "1.20"
 
       - run: go build
 
@@ -29,7 +35,7 @@ jobs:
 
       - run: npm ci
 
-      - run: npx prettier --check .
+      - run: npm run format:check
 
       - run: npm run check
 
