--- a/package.json
+++ b/package.json
@@ -8,24 +8,25 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig frontend/tsconfig.json",
-    "format": "prettier --write ."
+    "format": "prettier --ignore-path .gitignore --write .",
+    "format:check": "prettier --ignore-path .gitignore --check ."
   },
   "dependencies": {
-    "svelte": "^3.55.1"
+    "svelte": "^4.0.1"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.0.2",
-    "@tsconfig/svelte": "^3.0.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
+    "@sveltejs/vite-plugin-svelte": "^2.4.2",
+    "@tsconfig/svelte": "^5.0.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
-    "prettier": "2.8.4",
-    "prettier-plugin-svelte": "2.9.0",
-    "svelte-check": "^3.0.3",
-    "svelte-preprocess": "^5.0.1",
-    "tailwindcss": "^3.2.6",
-    "tslib": "^2.5.0",
-    "typescript": "~4.9.5",
-    "vite": "^4.1.1"
+    "prettier": "2.8.8",
+    "prettier-plugin-svelte": "^2.10.1",
+    "svelte-check": "^3.4.4",
+    "svelte-preprocess": "^5.0.4",
+    "tailwindcss": "^3.3.2",
+    "tslib": "^2.6.0",
+    "typescript": "~5.1.6",
+    "vite": "^4.3.9"
   }
 }
