Separate format checker and suggester
This stops the "skipped job" spam.

--- a/.github/workflows/format-checker.yml
+++ b/.github/workflows/format-checker.yml
@@ -1,13 +1,8 @@
 name: Format checker
-
-on:
-  push:
-  pull_request:
-
+on: push
 jobs:
   compare-gofmt:
     name: Compare gofmt output
-    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
       - name: Check out
@@ -20,20 +15,3 @@ jobs:
           gofmt -d -l -s . |
           : # If it exists, show diff and fail. Otherwise succeed.
           tee >([ -z "$(head -c1)" ])
-
-  suggest-gofmt:
-    name: Suggest gofmt changes
-    if: github.event_name == 'pull_request'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out
-        uses: actions/checkout@v3
-
-      - name: Run gofmt
-        run: gofmt -s -w .
-
-      - name: Suggest gofmt changes # in the form of a PR review
-        uses: reviewdog/action-suggester@v1
-        with:
-          tool_name: gofmt
-          filter_mode: nofilter
