Don't list formatted files explicitly
The -d option already puts the filename at the top.

--- a/.github/workflows/format-checker.yml
+++ b/.github/workflows/format-checker.yml
@@ -12,6 +12,6 @@ jobs:
         shell: bash
         run: |
           # Calculate gofmt diff.
-          gofmt -d -l -s . |
+          gofmt -d -s . |
           # If it exists, show diff and fail. Otherwise succeed.
           tee >([ -z "$(head -c1)" ])
