Adjust job name wording

--- a/.github/workflows/format-checker.yml
+++ b/.github/workflows/format-checker.yml
@@ -1,8 +1,8 @@
 name: Format checker
 on: push
 jobs:
-  compare-gofmt:
-    name: Compare gofmt output
+  ensure-gofmt:
+    name: Ensure gofmt matches
     runs-on: ubuntu-latest
     steps:
       - name: Check out
