--- a/.github/workflows/format-checker.yml
+++ b/.github/workflows/format-checker.yml
@@ -12,4 +12,4 @@ jobs:
         run: gofmt -s -w .
 
       - name: Ensure gofmt matches
-        run: git diff --exit-code
+        run: git diff --color --exit-code
