Make job name concise

--- a/.github/workflows/format-checker.yml
+++ b/.github/workflows/format-checker.yml
@@ -1,8 +1,8 @@
 name: Format checker
 on: push
 jobs:
-  ensure-gofmt:
-    name: Ensure gofmt matches
+  gofmt:
+    name: gofmt
     runs-on: ubuntu-latest
     steps:
       - name: Check out
